changed key field to be a password

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <script src="./index.js"></script>
         <label>Key:</label>
-        <input type="text" id="key" />
+        <input type="password" id="key" />
         <br />
         <label>Channel ID:</label>
         <input type="text" id="channel-id" />
