--- a/index.html
+++ b/index.html
@@ -7,16 +7,94 @@
         <title>Document</title>
     </head>
     <body>
+        <style>
+            body {
+                background-color: #1e1e1e;
+            }
+            #submit {
+                height: 5rem;
+                width: 25rem;
+                font-size: large;
+                background-color: rgb(76, 0, 255);
+                border-color: black;
+                margin-bottom: 15vh;
+            }
+            label {
+                color: white;
+            }
+            input {
+                font-size: large;
+                background-color: lightgray;
+            }
+            #key {
+                width: 8rem;
+                text-align: center;
+                height: 1.5rem;
+            }
+            #channel-id{
+                text-align: center;
+                width: 15rem;
+                height: 1.5rem;
+            }
+            textarea {
+                width: 30rem;
+                height: 10rem;
+                font-size: large;
+                background-color: lightgray;
+                padding-top: 5px;
+            }
+            .container {
+                display: flex;
+                flex-direction: column;
+                height: 98vh;
+                justify-content: center;
+                align-items: center;
+                font-size: x-large;
+            }
+            .key-div {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                width: 15rem;
+            }
+            .channel-id-div {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                width: 15rem;
+            }
+            .message-div {
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                align-items: center;
+                width: 15rem;
+            }
+
+        </style>
+
         <script src="./index.js"></script>
-        <label>Key:</label>
-        <input type="password" id="key" />
-        <br />
-        <label>Channel ID:</label>
-        <input type="text" id="channel-id" />
-        <br />
-        <label>Message:</label>
-        <input type="text" id="message" />
-        <br />
-        <button onclick="execute()" id="submit">Send</button>
+        <div class="container">
+            <div class="key-div">
+                <label>Key:</label>
+                <input type="password" id="key" />
+                <br />
+            </div>
+
+            <div class="channel-id-div">
+                <label>Channel ID:</label>
+                <input type="text" id="channel-id" />
+                <br />
+            </div>
+
+            <div class="message-div">
+                <label id="message-label">Message:</label>
+                <textarea id="message"> </textarea>
+                <br />
+            </div>
+            <button onclick="execute()" id="submit">Send</button>
+        </div>
     </body>
 </html>
